{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1007,
  "lineage": "45d5e892-fcc6-4081-51d6-262198059f76",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex_ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:517716713836:targetgroup/tf-20240209173521203200000011/a85eb8c5a57866d4",
            "arn_suffix": "targetgroup/tf-20240209173521203200000011/a85eb8c5a57866d4",
            "deregistration_delay": "1",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:517716713836:targetgroup/tf-20240209173521203200000011/a85eb8c5a57866d4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "tf-20240209173521203200000011",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "njoshi02",
              "terraform-aws-modules": "alb",
              "vendor": "CrowdStrike"
            },
            "tags_all": {
              "name": "njoshi02",
              "terraform-aws-modules": "alb",
              "vendor": "CrowdStrike"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-098a7f677075f1c06"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:517716713836:security-group/sg-03a865577bacd65a1",
            "description": "Autoscaling group security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a865577bacd65a1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f115fa3a0018b0d4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "random-autoscale-security-group-2024020917352117670000000f",
            "name_prefix": "random-autoscale-security-group-",
            "owner_id": "517716713836",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "random-autoscale-security-group",
              "name": "njoshi02",
              "vendor": "CrowdStrike"
            },
            "tags_all": {
              "Name": "random-autoscale-security-group",
              "name": "njoshi02",
              "vendor": "CrowdStrike"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-098a7f677075f1c06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:517716713836:subnet/subnet-0613324197d1c99b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 4088,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0613324197d1c99b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "random-vpc-private-eu-west-1a",
              "name": "njoshi02",
              "vendor": "CrowdStrike"
            },
            "vpc_id": "vpc-098a7f677075f1c06"
          }
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:517716713836:security-group/sg-0103128a84d983e8e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0103128a84d983e8e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Service port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f115fa3a0018b0d4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "random-ecs-service-20240209173521697100000012",
            "name_prefix": "random-ecs-service-",
            "owner_id": "517716713836",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "njoshi02",
              "vendor": "CrowdStrike"
            },
            "tags_all": {
              "name": "njoshi02",
              "vendor": "CrowdStrike"
            },
            "timeouts": null,
            "vpc_id": "vpc-098a7f677075f1c06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:517716713836:subnet/subnet-0613324197d1c99b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0613324197d1c99b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "random-vpc-private-eu-west-1a",
              "name": "njoshi02",
              "vendor": "CrowdStrike"
            },
            "tags_all": {
              "Name": "random-vpc-private-eu-west-1a",
              "name": "njoshi02",
              "vendor": "CrowdStrike"
            },
            "vpc_id": "vpc-098a7f677075f1c06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:517716713836:subnet/subnet-06cc5d47efef24428",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cc5d47efef24428",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "random-vpc-private-eu-west-1b",
              "name": "njoshi02",
              "vendor": "CrowdStrike"
            },
            "tags_all": {
              "Name": "random-vpc-private-eu-west-1b",
              "name": "njoshi02",
              "vendor": "CrowdStrike"
            },
            "vpc_id": "vpc-098a7f677075f1c06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:517716713836:subnet/subnet-06c2558eaeb752e80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c2558eaeb752e80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "random-vpc-private-eu-west-1c",
              "name": "njoshi02",
              "vendor": "CrowdStrike"
            },
            "tags_all": {
              "Name": "random-vpc-private-eu-west-1c",
              "name": "njoshi02",
              "vendor": "CrowdStrike"
            },
            "vpc_id": "vpc-098a7f677075f1c06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:517716713836:vpc/vpc-098a7f677075f1c06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa7616c25d050c66",
            "default_route_table_id": "rtb-0fb36bbc6bf23e0d9",
            "default_security_group_id": "sg-0a12993c707fb6bf0",
            "dhcp_options_id": "dopt-1f0cad7b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-098a7f677075f1c06",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb36bbc6bf23e0d9",
            "owner_id": "517716713836",
            "tags": {
              "Name": "random-vpc",
              "name": "njoshi02",
              "vendor": "CrowdStrike"
            },
            "tags_all": {
              "Name": "random-vpc",
              "name": "njoshi02",
              "vendor": "CrowdStrike"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}